--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.7.7",
     "morgan": "~1.9.1",
+    "node": "^12.13.0",
     "nodemon": "^1.19.4"
   }
 }
